# ApiaryC

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  tests.sota
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  prelude.cmake  variables.cmake
docs/: Doxyfile.in
source/: hive.c  hive.h  lib.c  lib.h  main.c  melipona.c  melipona.h  microsoft.mixin.c
test/: CMakeLists.txt
test/source/: ApiaryC_test.c  ApiaryC_test_hive.c  ApiaryC_test_hive_attributic.c  ApiaryC_test_hive_long.c  ApiaryC_test_melipona.c  ApiaryC_test_tokenizer.c  ApiaryC_test_trim.c
